--- a/research-log/2025-11-29-遥感影像分类精度问题.md
+++ b/research-log/2025-11-29-遥感影像分类精度问题.md
@@ -1,4 +1,4 @@
-# 遥感影像分类精度问题
+# cnm三普
 
 **日期：** 2025-11-29
 
@@ -19,5 +19,3 @@ ai大人救救我
 wps里加了什么，用起来为什么这么累…
 
 ---
-
-> 你可以在这里写下你的科研日志，支持Markdown语法！
